Removing timestamp from tweets, fixing tweet spacing

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -545,6 +545,7 @@ a.brand {
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
   color: #2C3846;
   text-shadow: 0 1px 0 #fff;
+  margin-top: 10px;
 }
 
 .tweet .text a { color: #C32C03; }
@@ -552,10 +553,7 @@ a.brand {
 .username { position: relative; top: 0px; left: -10px; color: #fff; white-space: nowrap; line-height: 1em;}
 .username a { color: #2C3846; font-weight: bold; text-decoration: none; }
 .username a:hover { color: #C83D00; }
-.time { display: block; position: relative; line-height: 0px; top: -14px; left: 90px; font-size: 80%; margin-bottom: 20px;}
-.time a { color: #fff; white-space: nowrap; text-decoration: none; }
 .triangle { position: relative; bottom: 9px; left: 40px; height: 0px; width: 1px; margin-left: auto; margin-right: auto; border-top: 16px solid rgba(0, 30, 30, 0.7); border-left: none; border-right: 16px solid transparent; border-bottom: none; }
-
 
 .caret-container{position:relative}
 .caret-divider{position:absolute;top:0;left:28px;width:16px;height:8px}
